<resources>
    <string name="app_name">Mobile2youchallenge</string>
    <string name="visual_icon">Ícone de visualizações</string>
    <string name="total_fav">Ícone de favoritos totais</string>
    <string name="fav_icon">Ícone de favoritar</string>
    <string name="movie_image">Poster do filme</string>
    <string name="mini_poster_desc">Mini poster filme relacionado</string>
    <string name="ph_mini_titulo">Título Placeholder</string>
    <string name="mini_year">2016</string>
    <string name="mini_genres">Comedy, Animation</string>
    <string name="moviePlaceholder">Movie Title Part 3</string>
    <string name="desfav">Desfavoritado</string>
    <string name="fav">Favoritado</string>
    <string name="likes_placeholder">1.5k Likes</string>
    <string name="views_placeholder">12.6M</string>
</resources>