<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/soft_black">

    <ImageView
        android:id="@+id/miniPosterImage"
        android:layout_width="@dimen/similar_width"
        android:layout_height="@dimen/similar_height"
        android:scaleType="fitXY"
        android:padding="@dimen/default_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/poster_poderoso_chefinho"
        android:contentDescription="@string/mini_poster_desc" />

    <TextView
        android:id="@+id/miniPosterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_similar"
        android:fontFamily="@font/hind_madurai_bold"
        android:textColor="@color/white"
        android:textSize="@dimen/similar_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/miniPosterImage"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/ph_mini_titulo" />

    <TextView
        android:id="@+id/miniPosterYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/hind_madurai_light"
        android:textColor="@color/white"
        android:maxLength="4"
        android:textSize="@dimen/default_text_similar"
        app:layout_constraintStart_toStartOf="@id/miniPosterTitle"
        app:layout_constraintTop_toBottomOf="@id/miniPosterTitle"
        tools:text="@string/mini_year" />

    <TextView
        android:id="@+id/miniPosterGenres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_similar"
        android:fontFamily="@font/hind_madurai_light"
        android:textColor="@color/white"
        android:textSize="@dimen/default_text_similar"
        tools:text="@string/mini_genres"
        app:layout_constraintTop_toBottomOf="@id/miniPosterTitle"
        app:layout_constraintStart_toEndOf="@id/miniPosterYear"
        />


</androidx.constraintlayout.widget.ConstraintLayout>