<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageMovie"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/thegodfather"
        android:contentDescription="@string/movie_image" />

    <TextView
        android:id="@+id/movieTitle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageMovie" />


    <ImageView
        android:id="@+id/favButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:background="@drawable/ic_to_favorite"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/movieTitle"
        app:layout_constraintTop_toTopOf="@id/movieTitle"
        android:contentDescription="@string/fav_icon" />

    <ImageView
        android:id="@+id/likesImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollRV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieTitle"
        app:srcCompat="@drawable/ic_likes"
        android:contentDescription="@string/total_fav" />

    <TextView
        android:id="@+id/movieLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollRV"
        app:layout_constraintStart_toEndOf="@+id/likesImage"
        app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

    <ImageView
        android:id="@+id/viewsImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollRV"
        app:layout_constraintStart_toEndOf="@+id/movieLikes"
        app:layout_constraintTop_toBottomOf="@+id/movieTitle"
        app:srcCompat="@drawable/ic_views"
        android:contentDescription="@string/visual_icon" />

    <TextView
        android:id="@+id/likePercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/scrollRV"
        app:layout_constraintStart_toEndOf="@+id/viewsImage"
        app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

    <ScrollView
        android:id="@+id/scrollRV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieLikes">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/similarMoviesRV"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

    </ScrollView>


    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageMovie"
        app:layout_constraintTop_toTopOf="@+id/imageMovie" />

</androidx.constraintlayout.widget.ConstraintLayout>